tests/snapshots/query_result_basic__search_hit_simple.snap
---
source: tests/query_result_basic.rs
expression: hit
---
VantaSearchHit {
    node_id: 12345,
    distance: 0.15,
}
